--- a/HCloud/Content/Site.css
+++ b/HCloud/Content/Site.css
@@ -176,7 +176,7 @@ input, select, textarea {
     margin: 10px;
     padding: 10px;
     bottom: 0px;
-    height: 85.5vh;
+    height: 87.2vh;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -602,7 +602,8 @@ input, select, textarea {
 
 .FilesTopBar {
     width: 100%;
-    height: 50px;
+    min-height: 50px;
+    height: auto;
     background-color: #e2f2f2;
     color: black;
     padding-top: 14px;
